# discord-ci-cd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
docker-files/git-server/gitea/git/repositories/test/dcicd-test.git/info/: refs
docker-files/git-server/gitea/git/repositories/test/dcicd-test.git/logs/: HEAD
docker-files/git-server/gitea/git/repositories/test/dcicd-test.git/refs/heads/: main
docker-files/git-server/gitea/gitea/: gitea.db
docker-files/git-server/gitea/gitea/conf/: app.ini
docker-files/git-server/gitea/gitea/indexers/issues.bleve/store/: root.bolt
docker-files/git-server/gitea/gitea/jwt/: private.pem
docker-files/git-server/gitea/gitea/queues/common/: 000002.ldb  LOG  MANIFEST-000008  MANIFEST-000014
docker-files/git-server/gitea/gitea/sessions/2/4/: 240f8f024e4fa3f5
docker-files/runner/: Dockerfile  Dockerfile.mk-runner
src/: ci_cd.rs  lib.rs
