[package]
name = "discord-ci-cd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
docker-command = "5.0.1"
git2 = "0.19.0"
poise = "0.6.1"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
url = { version = "2.5.2", features = ["serde"] }
